# etudes

./: .clang-format  README.md  bitonic.c  catalan.cxx  chomp.py  cyclicsortedfindmax.py  ecc.cc  fibonacci.py  hue.py  hue1.py  klotski.cxx  lightsout.py  loop.c  parkinglot.cxx  queue.c  random7.c  signal.c  singular.py
.github/actions/yamlfmt/: action.yaml  yamlfmt.yaml
asm/: a.out  fib.s  main.cc
median/: CMakeLists.txt  median.cc  median.h  median_test.cc
resnet/: akamaster.py  hubert10.py  kamal.py  resnet18.py
square1/: Makefile  shape.py  solver.cc  solver.h
